Fixed opacity style on IE

--- a/source/stylesheets/styles.css.scss
+++ b/source/stylesheets/styles.css.scss
@@ -43,6 +43,13 @@ ul {
     color: white;
     text-decoration: none;
     background: rgba(255, 255, 255, 0.2);
+    background-color: #FFFFFF;
+    /* other browsers */
+    opacity: 0.2;
+    /* this works in IE6, IE7, and IE8 */
+    filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20); 
+    /* this works in IE8 only */
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=20)";
   }
   &.left {
     left: 0;
@@ -73,6 +80,13 @@ ul {
       display: block;
       color: white;
       background: rgba(85, 85, 85, 0.5);
+      background-color: #555555;
+      /* other browsers */
+      opacity: 0.2;
+      /* this works in IE6, IE7, and IE8 */
+      filter: progid:DXImageTransform.Microsoft.Alpha(opacity=20); 
+      /* this works in IE8 only */
+      -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(opacity=20)";
       line-height: 300%;
       margin: 0;
       border-bottom: 3px solid white;
